--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -15,6 +15,29 @@
     margin-bottom: 15px;
     margin-right: 15px;
 }
+
+.UsernameGroup {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.checkUsernameBtn {
+    margin-left: 10px; /* Adjust based on your actual button size */
+    cursor: pointer;
+    background-color: #007bff;
+    border: none;
+    color: white;
+    padding: 8px 10px;
+    border-radius: 4px;
+    width: 15%;
+    height: 100%;
+}
+
+.checkUsernameBtn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
   
 .formGroup label {
     display: block;
@@ -65,4 +88,16 @@ button:hover {
     margin: 0 auto 10px;
     width: 50px;
     height: 50px;
+}
+
+.checkUsernameBtn.loading {
+    background-color: #ffc107; /* Yellow for loading */
+}
+
+.checkUsernameBtn.available {
+    background-color: #28a745; /* Green for available */
+}
+
+.checkUsernameBtn.unavailable {
+    background-color: #dc3545; /* Red for unavailable */
 }
