login page works now, and added some css for when button is disabled

--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -59,6 +59,12 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+.button:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+    color: #666666;
+  }
   
 .signUpPage a {
     display: block;
