--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -41,6 +41,12 @@ button:hover {
   background-color: #0056b3;
 }
 
+.button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+  color: #666666;
+}
+
 .loginPage a {
   display: block;
   margin-top: 20px;
