had to change some periods

--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -60,7 +60,7 @@ button:hover {
     background-color: #0056b3;
 }
 
-.button:disabled {
+button:disabled {
     background-color: #cccccc;
     cursor: not-allowed;
     color: #666666;
