--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -41,7 +41,7 @@ button:hover {
   background-color: #0056b3;
 }
 
-.button:disabled {
+button:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
   color: #666666;
@@ -69,4 +69,8 @@ button:hover {
   margin: 0 auto 10px;
   width: 50px;
   height: 50px;
+}
+
+.invalidInput {
+  border-color: red;
 }
