--- a/frontend/src/components/CreateProject/CreateProject.css
+++ b/frontend/src/components/CreateProject/CreateProject.css
@@ -70,6 +70,7 @@
     color: white;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 18px;
 }
 
 .createInteractiveButtons:hover{
@@ -89,23 +90,6 @@
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-}
-
-.projectDisplay {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.imageContainer {
-    width: 100%;
-    overflow: hidden; /* Only for debugging */
-}
-
-.projectImage {
-    max-width: 100%;
-    height: auto;
 }
 
 .submitBtn, .cancelBtn{
@@ -132,3 +116,58 @@
 .submitBtn:hover, .editButton:hover{
     background-color: #0056b3;
 }
+
+.projectDisplay {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.imageContainer {
+    position: fixed;
+    top: 60px; /* Adjust if necessary based on the height of the projectTitleContainer */
+    left: 0;
+    right: 0;
+    bottom: 60px;
+    overflow: scroll; /* Enable scrolling within the container */
+    border: 1px solid #ccc;
+    box-sizing: border-box; /* Ensure border doesn't add to the width */
+}
+
+.projectImage {
+    width: auto;
+    height: auto;
+    min-width: 100%; /* Cover at least the full width of the container */
+    min-height: 100%; /* Cover at least the full height of the container */
+    object-fit: cover; /* Cover the container without losing aspect ratio */
+}
+
+.zoomControlContainer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    background: rgba(255, 255, 255, 0.9);
+    z-index: 100;
+    box-shadow: 0 0 0 4px rgba(0,0,0,0.1);
+    padding: 10px 20px;
+}
+
+.zoomInButton, .zoomOutButton {
+    font-size: 18px;
+    padding: 8px 16px;
+    margin: 0 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+
+
